package utn.models.helpers;

public enum Origen {
  CARGA_MANUAL, DATASET, CONTRIBUYENTE, API
}
